[package]
name = "passkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
log = "0.4.20"

hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
simple_logger = "4.3.3"
serde = { version = "1.0.195", features = ["derive"] }
base64 = "0.21.7"
tower-http = { version = "0.5.0", features = ["cors"] }
